# masters-thesis-code

./: .gitmodules  CHANGELOG.md  Compiler.cabal  LICENSE  README.md  TODO  TODO.md  cabal.project  count_code.sh  diagram.dot  hie.yaml  masters-thesis-code.code-workspace  run-examples.cmd  run-examples.sh  test.chmmm  test2.chmmm  test3.chmmm  workspace.code-workspace
.github/workflows/: cabal.yml  haskell.yml
Compiler/: CHANGELOG.md  Compiler.cabal  Main.hs
Inference/: CHANGELOG.md  Inference.cabal  Inference.hs  LICENSE
Language/: CHANGELOG.md  Language.cabal  Language.hs
Parser/: CHANGELOG.md  Parser.cabal  Parser.hs
doc/: TODOdiagram.dot  diagram.dot  flattener.dot
examples/: test-bad-call.chmmm  test-bad-consumers.chmmm  test-bad-dropped.chmmm  test-bad-dropped2.chmmm  test-bad-duplicate-function.chmmm  test-bad-fallthrough.chmmm  test-bad-field-type.chmmm  test-bad-kind.chmmm  test-bad-not-found.chmmm  test-bad-return.chmmm  test-bad-superclass.chmmm  test-bad-syntax.chmmm  test-bad-triv-fd.chmmm  test-bad-type.chmmm  test-bad-uninitialized.chmmm  test-bad-unknown-field.chmmm  test-bad-unknown-struct.chmmm  test-brace-yourself.chmmm  test-class.chmmm  test-deref.chmmm  test-dropped.chmmm  test-fallthrough.chmmm  test-flatten.chmmm  test-indirect-write.chmmm  test-infinite.chmmm  test-llvm.chmmm  test-llvm2.chmmm  test-local.chmmm  test-man2_example_1.chmmm  test-mono.chmmm  test-mono2.chmmm  test-mptc.chmmm  test-poly-field.chmmm  test-poly-resource.chmmm  test-polymorphism.chmmm  test-raii.chmmm  test-recursion.chmmm  test-resource-management.chmmm  test-simple-fd.chmmm  test-struct.chmmm  (+5 more)
src/: Main.hs  Peano.hs
src/CMM/: AST.hs  FillElabs.hs  FillHoles.hs  FlowAnalysis.hs  Inference.hs  Lens.hs  Lexer.hs  Mangle.hs  Monomorphize.hs  Options.hs  Parser.hs  Pipeline.hs  Pretty.hs  TranslState.hs  Translator.hs  Type.hs  TypeMiner.hs  Utils.hs  Warnings.hs
src/CMM/AST/: Annot.hs  BlockAnnot.hs  Blockifier.hs  BlockifierState.hs  Flattener.hs  GetConv.hs  GetName.hs  HasName.hs  LRAnalysis.hs  Maps.hs  Utils.hs  Variables.hs  Wrap.hs
src/CMM/AST/Blockifier/: Error.hs  FilterDropped.hs  State.hs
src/CMM/AST/Blockifier/State/: Impl.hs
src/CMM/AST/Flattener/: State.hs
src/CMM/AST/Variables/: Error.hs  State.hs  SymbolType.hs
src/CMM/AST/Variables/State/: Impl.hs
src/CMM/Control/: Applicative.hs  Monad.hs
src/CMM/Data/: Bimap.hs  Bounded.hs  Bounds.hs  Church.hs  Dioid.hs  Either.hs  Float.hs  Function.hs  Generics.hs  Lattice.hs  List.hs  MapLike.hs  Nullable.hs  Num.hs  Orderable.hs  Ordered.hs  OrderedBounds.hs  Trilean.hs  Tuple.hs  Way.hs  Zippable.hs
src/CMM/Data/Bounds/: Impl.hs
src/CMM/Err/: Error.hs  IsError.hs  Severity.hs  State.hs
src/CMM/Inference/: Arity.hs  BuiltIn.hs  Constness.hs  DataKind.hs  Fact.hs  FreeTypeVars.hs  FunDeps.hs  GetParent.hs  HandleCounter.hs  InferPreprocessor.hs  Preprocess.hs  PreprocessClass.hs  Properties.hs  Refresh.hs  Settings.hs  State.hs  Subst.hs  Type.hs  TypeAnnot.hs  TypeCompl.hs  TypeHandle.hs  TypeKind.hs  TypeVar.hs  Unify.hs  Utils.hs
src/CMM/Inference/BuiltIIn/: Operator.hs
src/CMM/Inference/Preprocess/: ClassData.hs  Context.hs  Elaboration.hs  Error.hs  HasProperties.hs  HasTypeHandle.hs  HasTypeHole.hs  Settings.hs  State.hs  TypeHole.hs  WithElaboration.hs  WithTypeHole.hs
src/CMM/Inference/Preprocess/State/: Impl.hs
src/CMM/Inference/State/: Impl.hs
src/CMM/Inference/TypeHandle/: Impl.hs
src/CMM/Inference/Unify/: Error.hs
src/CMM/Lexer/: Token.hs
src/CMM/Monomorphize/: Error.hs  MakeSignature.hs  Mangle.hs  Monomorphized.hs  PolyKind.hs  Polytypeness.hs  Schematized.hs  Settings.hs  State.hs
src/CMM/Monomorphize/State/: Impl.hs
src/CMM/Parser/: ASTError.hs  GetPos.hs  HasPos.hs
src/CMM/Translator/: State.hs  TranslState.hs
src/Compiler/: Main.hs
src/Inference/: Inference.hs
src/Language/: AST.hs  CMM.hs  Lexer.hs  Parser.hs  Pretty.hs  TranslState.hs  Translator.hs  Utils.hs  Warnings.hs
src/Language/AST/: BlockAnnot.hs  Blockifier.hs  Flattener.hs  LRAnalysis.hs  Utils.hs
src/Language/Parser/: HasPos.hs  Utils.hs
test/: ParserTest.hs  QuasiQuotes.hs
