cabal-version:       2.4

name:                Compiler
version:             0.1.0.0
synopsis:            TODO: add synopsis
description:         TODO: add description
homepage:            https://github.com/jiriklepl/masters-thesis-code
bug-reports:         https://github.com/jiriklepl/masters-thesis-code/issues
license:             NONE
author:              Jiří Klepl
maintainer:          jiriklepl@seznam.cz
category:            Development
extra-source-files:  CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/jiriklepl/masters-thesis-code

common common-options
  default-extensions:  ConstraintKinds
                       DeriveDataTypeable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTSyntax
                       KindSignatures
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeOperators
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wcpp-undef
                       -Wextra
                       -Widentities
                       -Wimplicit-prelude
                       -Wmissing-import-lists
                       -Wredundant-constraints
                       -Wsafe
                       -Wunused-packages
  build-depends:       base >= 4.13 && < 4.17,
                       containers ^>=0.6.4.1,
                       megaparsec ^>=9.0.1,
                       prettyprinter ^>=1.7.1,
                       text ^>=1.2.4.0,

executable Compiler
  import:              common-options
  main-is:             Compiler/Main.hs
  other-modules:       CMM.AST,
                       CMM.AST.Annot,
                       CMM.AST.Blockifier,
                       CMM.AST.Blockifier.State,
                       CMM.AST.Blockifier.State.Impl,
                       CMM.AST.BlockAnnot,
                       CMM.AST.Flattener,
                       CMM.AST.HasName,
                       CMM.AST.Maps,
                       CMM.AST.Utils,
                       CMM.AST.Variables,
                       CMM.AST.Variables.State,
                       CMM.AST.Variables.State.Impl,
                       CMM.Control.Applicative,
                       CMM.Control.Monad,
                       CMM.Data.Bimap,
                       CMM.Data.Bounded,
                       CMM.Data.Bounds,
                       CMM.Data.Bounds.Impl,
                       CMM.Data.Dioid,
                       CMM.Data.Either,
                       CMM.Data.Float,
                       CMM.Data.Function,
                       CMM.Data.Lattice,
                       CMM.Data.Nullable,
                       CMM.Data.Num,
                       CMM.Data.Ordered,
                       CMM.Data.OrderedBounds,
                       CMM.Data.Tuple,
                       CMM.FlowAnalysis,
                       CMM.Inference,
                       CMM.Inference.BuiltIn,
                       CMM.Inference.Constness,
                       CMM.Inference.DataKind,
                       CMM.Inference.Fact,
                       CMM.Inference.FreeTypeVars,
                       CMM.Inference.Preprocess,
                       CMM.Inference.Preprocess.ClassData,
                       CMM.Inference.Preprocess.Context,
                       CMM.Inference.Preprocess.HasTypeHandle,
                       CMM.Inference.Preprocess.HasTypeHole,
                       CMM.Inference.Preprocess.TypeHole,
                       CMM.Inference.Preprocess.State,
                       CMM.Inference.Preprocess.State.Impl,
                       CMM.Inference.State,
                       CMM.Inference.State.Impl,
                       CMM.Inference.Subst,
                       CMM.Inference.Type,
                       CMM.Inference.TypeAnnot,
                       CMM.Inference.TypeCompl,
                       CMM.Inference.TypeHandle,
                       CMM.Inference.TypeKind,
                       CMM.Inference.TypeVar,
                       CMM.Inference.Unify,
                       CMM.Lens,
                       CMM.Lexer,
                       CMM.Monomorphize,
                       CMM.Monomorphize.Mangle,
                       CMM.Monomorphize.Monomorphized,
                       CMM.Monomorphize.PolyKind,
                       CMM.Monomorphize.Schematized,
                       CMM.Parser,
                       CMM.Parser.HasPos,
                       CMM.Pretty,
                       CMM.Translator,
                       CMM.Translator.State,
                       CMM.Utils,
                       CMM.Warnings
  build-depends:       bimap ^>= 0.4.0,
                       lens >=5.0.1 && <5.2,
                       llvm-hs-pure ^>=9.0.0,
                       llvm-hs-pretty ^>=0.9.0.0,
                       mtl ^>=2.2.2,
                       partial-order ^>=0.2.0.0,
                       syb ^>=0.7.2.1,
  hs-source-dirs:      src

Test-Suite parser-testsuite
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             ParserTest.hs
  other-modules:       CMM.AST,
                       CMM.AST.Utils,
                       CMM.Lexer,
                       CMM.Parser,
                       CMM.Parser.HasPos,
                       CMM.Pretty,
                       CMM.Utils,
                       CMM.Warnings,
                       QuasiQuotes
  build-depends:       template-haskell >=2.17.0.0 && <2.19.0.0,
                       HUnit,
  hs-source-dirs:      src, test
