cabal-version:       2.4

name:                Compiler
version:             0.1.0.0
synopsis:            TODO: add synopsis
description:         TODO: add description
homepage:            https://github.com/jiriklepl/masters-thesis-code
bug-reports:         https://github.com/jiriklepl/masters-thesis-code/issues
license:             NONE
author:              Jiří Klepl
maintainer:          jiriklepl@seznam.cz
category:            Development
extra-source-files:  CHANGELOG.md

source-repository head
  type:                git
  location:            https://github.com/jiriklepl/masters-thesis-code

common common-options
  default-extensions:  ConstraintKinds
                       DeriveDataTypeable
                       DeriveTraversable
                       FlexibleContexts
                       FlexibleInstances
                       FunctionalDependencies
                       GADTSyntax
                       KindSignatures
                       LambdaCase
                       NoImplicitPrelude
                       OverloadedStrings
                       ScopedTypeVariables
                       StandaloneDeriving
                       TupleSections
                       TypeFamilies
                       TypeOperators
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wextra
                       -Wcpp-undef
                       -Widentities
                       -Wimplicit-prelude
                       -Wmissing-import-lists
                       -Wredundant-constraints
                       -Wsafe
                       -Wunused-packages
  cpp-options:         -DUSE_GHC_STACK
  cpp-options:         -DFACT_COMMENTS
  build-depends:       base >= 4.13 && < 4.17,
                       containers ^>=0.6.4.1,
                       extra ^>=1.7.10,
                       lens >=5.0.1 && <5.2,
                       megaparsec ^>=9.0.1,
                       prettyprinter ^>=1.7.1,
                       text ^>=1.2.4.0

executable Compiler
  import:              common-options
  main-is:             Main.hs
  other-modules:       CMM.AST,
                       CMM.AST.Annot,
                       CMM.AST.Blockifier,
                       CMM.AST.Blockifier.Error,
                       CMM.AST.Blockifier.State,
                       CMM.AST.Blockifier.State.Impl,
                       CMM.AST.BlockAnnot,
                       CMM.AST.Flattener,
                       CMM.AST.GetConv,
                       CMM.AST.GetName,
                       CMM.AST.Maps,
                       CMM.AST.Utils,
                       CMM.AST.Variables,
                       CMM.AST.Variables.Error,
                       CMM.AST.Variables.State,
                       CMM.AST.Variables.State.Impl,
                       CMM.AST.Variables.SymbolType,
                       CMM.Control.Applicative,
                       CMM.Control.Monad,
                       CMM.Data.Bimap,
                       CMM.Data.Bounded,
                       CMM.Data.Bounds,
                       CMM.Data.Bounds.Impl,
                       CMM.Data.Church,
                       CMM.Data.Dioid,
                       CMM.Data.Either,
                       CMM.Data.Float,
                       CMM.Data.Function,
                       CMM.Data.Generics,
                       CMM.Data.Lattice,
                       CMM.Data.List,
                       CMM.Data.Nullable,
                       CMM.Data.Num,
                       CMM.Data.Ordered,
                       CMM.Data.OrderedBounds,
                       CMM.Data.Trilean,
                       CMM.Data.Tuple,
                       CMM.Data.Way,
                       CMM.Data.Zippable,
                       CMM.Err.Error,
                       CMM.Err.IsError,
                       CMM.Err.Severity,
                       CMM.Err.State,
                       CMM.FlowAnalysis,
                       CMM.Inference,
                       CMM.Inference.Arity,
                       CMM.Inference.BuiltIn,
                       CMM.Inference.Constness,
                       CMM.Inference.DataKind,
                       CMM.Inference.Fact,
                       CMM.Inference.FreeTypeVars,
                       CMM.Inference.FunDeps,
                       CMM.Inference.GetParent,
                       CMM.Inference.HandleCounter,
                       CMM.Inference.Preprocess,
                       CMM.Inference.Preprocess.ClassData,
                       CMM.Inference.Preprocess.Context,
                       CMM.Inference.Preprocess.HasTypeHandle,
                       CMM.Inference.Preprocess.WithTypeHole,
                       CMM.Inference.Preprocess.TypeHole,
                       CMM.Inference.Preprocess.State,
                       CMM.Inference.Preprocess.State.Impl,
                       CMM.Inference.Refresh,
                       CMM.Inference.State,
                       CMM.Inference.State.Impl,
                       CMM.Inference.Subst,
                       CMM.Inference.Type,
                       CMM.Inference.TypeAnnot,
                       CMM.Inference.TypeCompl,
                       CMM.Inference.TypeHandle,
                       CMM.Inference.TypeKind,
                       CMM.Inference.TypeVar,
                       CMM.Inference.Unify,
                       CMM.Inference.Unify.Error,
                       CMM.Inference.Utils,
                       CMM.Lens,
                       CMM.Lexer,
                       CMM.Monomorphize,
                       CMM.Monomorphize.Mangle,
                       CMM.Monomorphize.Polytypeness,
                       CMM.Monomorphize.Schematized,
                       CMM.Monomorphize.State,
                       CMM.Monomorphize.State.Impl,
                       CMM.Parser,
                       CMM.Parser.ASTError,
                       CMM.Parser.HasPos,
                       CMM.Pretty,
                       CMM.Translator,
                       CMM.Translator.State,
                       CMM.Utils
  build-depends:       bimap ^>= 0.4.0,
                       llvm-hs-pretty ^>=12.0.0,
                       llvm-hs-pure ^>=12.0.0,
                       mtl ^>=2.2.2,
                       partial-order ^>=0.2.0.0,
                       syb ^>=0.7.2.1
  hs-source-dirs:      src

Test-Suite parser-testsuite
  import:              common-options
  type:                exitcode-stdio-1.0
  main-is:             ParserTest.hs
  other-modules:       CMM.AST,
                       CMM.AST.Annot,
                       CMM.AST.GetName,
                       CMM.AST.Utils,
                       CMM.Control.Applicative,
                       CMM.Data.Float,
                       CMM.Data.Num,
                       CMM.Lexer,
                       CMM.Parser,
                       CMM.Parser.HasPos,
                       CMM.Pretty,
                       CMM.Utils,
                       QuasiQuotes
  build-depends:       template-haskell >=2.16.0.0 && <2.19.0.0,
                       HUnit,
  hs-source-dirs:      src, test
